--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ MONGO_USER=danialmomenpour
 MONGO_PASSWORD=betoche
 MONGO_URI=mongodb+srv://${MONGO_USER}:${MONGO_PASSWORD}@cluster0.o0hzq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
-NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_URL="https://real-state-app-with-danial.vercel.app/"
 NEXTAUTH_SECRET="4150a10b759b9ab5742d3f4e898a27d1"
